<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:btn="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/app_market_item_container"
    android:background="@drawable/app_item_bg">

    <ImageView
        android:id="@+id/app_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:src="@mipmap/category_finiancial"/>

    <TextView
        android:id="@+id/app_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/app_item_icon"
        android:text="AppStore"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignTop="@id/app_item_icon"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="14dp"
        />

    <TextView
        android:id="@+id/app_item_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23.09M"
        android:layout_toRightOf="@id/app_item_icon"
        android:layout_marginLeft="14dp"
        android:layout_alignBottom="@id/app_item_icon"
        android:layout_marginBottom="19dp"
        android:textSize="17sp"
        />

    <TextView
        android:id="@+id/app_item_download_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_alignBottom="@id/app_item_size"
        android:layout_toRightOf="@id/app_item_size"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="3dp"
        />

    <!-- the button here we using the custom button
         with progress attribute set -->
    <com.singuloid.singuloidappstore.lib.button.AppManageBtn
        android:id="@+id/btn_app_item_manage"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="7dp"
        android:padding="7dp"
        android:text="@string/app_state_init"
        btn:pb_textComplete="@string/app_state_downloaded"
        btn:pb_textError="@string/app_state_error"
        btn:pb_textProgress="@string/app_state_downloading"
        btn:pb_colorComplete="@color/green_complete"
        btn:pb_colorNormal="@color/blue_normal"
        btn:pb_colorError="@color/red_error"
        btn:pb_colorProgress="@color/purple_progress"
        btn:pb_colorPressed="@color/blue_pressed"
        />


</RelativeLayout>