<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/local_app_item_container"
    android:background="@drawable/app_item_bg"
    android:padding="4dp"
    android:layout_margin="4dp"
    android:clickable="true">

    <ImageView
        android:id="@+id/app_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/app_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignTop="@id/app_item_icon"
        android:layout_toRightOf="@id/app_item_icon"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="3dp"
        />


    <TextView
        android:id="@+id/app_item_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version_str"
        android:layout_below="@id/app_item_title"
        android:layout_toRightOf="@id/app_item_icon"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="7dp"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/app_item_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2.34M"
        android:layout_alignBottom="@id/app_item_version"
        android:textSize="18sp"
        android:layout_toRightOf="@id/app_item_version"
        android:layout_marginLeft="12dp"
        />

    <Button
        android:id="@+id/btn_app_item_manage"
        android:background="@drawable/btn_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="7dp"
        android:padding="7dp"
        android:text="@string/app_manage_uninstall"
        />

</RelativeLayout>